FIX :+1: Homepage spacing fix
Fix the spacing between the restaurant cards.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -401,8 +401,8 @@ body {
 
 .icon__new {
   position: relative;
-  left: 13.5rem;
-  top: 3rem;
+  left: 12rem;
+  bottom: 15.5rem;
   z-index: 1;
 }
 
