--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -5,8 +5,8 @@
 	}
 	&__new {
 		position: relative;
-		left: 13.5rem;
-		top: 3rem;
+		left: 12rem;
+		bottom: 15.5rem;
 		z-index: 1;
 	}
 }
